<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Static: Add Expense -->
    <shortcut
        android:shortcutId="add_expense"
        android:shortcutShortLabel="@string/shortcut_add_expense"
        android:shortcutLongLabel="@string/shortcut_add_expense_long"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_add_expense">
        <intent
            android:action="com.mknlabs.expensetracker.action.ADD_TRANSACTION"
            android:targetPackage="com.mknlabs.expensetracker"
            android:targetClass="com.mknlabs.expensetracker.MainActivity">
            <extra
                android:name="transaction_type_id"
                android:value="2" />
        </intent>
    </shortcut>

    <!-- Static: Add Income -->
    <shortcut
        android:shortcutId="add_income"
        android:shortcutShortLabel="@string/shortcut_add_income"
        android:shortcutLongLabel="@string/shortcut_add_income_long"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_add_income">
        <intent
            android:action="com.mknlabs.expensetracker.action.ADD_TRANSACTION"
            android:targetPackage="com.mknlabs.expensetracker"
            android:targetClass="com.mknlabs.expensetracker.MainActivity">
            <extra
                android:name="transaction_type_id"
                android:value="1" />
        </intent>
    </shortcut>

    <!-- Dynamic: This Month Summary -->
    <shortcut
        android:shortcutId="month_summary"
        android:shortcutShortLabel="@string/shortcut_month_summary"
        android:shortcutLongLabel="@string/shortcut_month_summary_long"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_month_summary">
        <intent
            android:action="com.mknlabs.expensetracker.action.VIEW_ANALYTICS"
            android:targetPackage="com.mknlabs.expensetracker"
            android:targetClass="com.mknlabs.expensetracker.MainActivity" />
    </shortcut>

    <!-- Speak To Add -->
    <shortcut
        android:shortcutId="speak_to_add"
        android:shortcutShortLabel="@string/shortcut_speak_to_add"
        android:shortcutLongLabel="@string/shortcut_speak_to_add_long"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_speak_to_add">
        <intent
            android:action="com.mknlabs.expensetracker.action.SPEAK_TO_ADD"
            android:targetPackage="com.mknlabs.expensetracker"
            android:targetClass="com.mknlabs.expensetracker.MainActivity" />
    </shortcut>

    <!-- Dynamic: Copy Previous Month Budget -->
    <shortcut
        android:shortcutId="copy_budget"
        android:shortcutShortLabel="@string/shortcut_copy_budget"
        android:shortcutLongLabel="@string/shortcut_copy_budget_long"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_copy_budget">
        <intent
            android:action="com.mknlabs.expensetracker.action.COPY_BUDGET"
            android:targetPackage="com.mknlabs.expensetracker"
            android:targetClass="com.mknlabs.expensetracker.MainActivity" />
    </shortcut>

</shortcuts>
